<resources>
    <string name="app_name">SeuReuReuk</string>
    <string name="logo">앱 메인 로고</string>
    <string name="button_add">모임 생성 버튼</string>
    <string name="button_edit">모임 수정 버튼</string>
    <string name="icon_home">네비게이션 바 홈 버튼</string>
    <string name="icon_my">네비게이션 바 마이페이지 버튼</string>
    <string name="resend_certififate_num"><u>인증번호 재전송</u></string>
    <string name="selectTelecom"><u>통신사를 선택해주세요</u></string>

    <string name="sort_settlement_list">정렬</string>
    <string name="settlemment_not_exist">아직 정산 내역이 없어요. 정산을 추가해주세요 😊</string>
    <string name="add_settlement">+ 정산 추가하기</string>
    <string name="member">멤버</string>
    <string name="participants">참여 멤버</string>
    <string name="header_dongas">핀인코 - 돈가스</string>
    <string name="create_group_hint">모임 생성 화면</string>
    <string name="bookmark">즐겨 찾기</string>
    <string name="add_bookmark_recommend">즐겨찾는 모임을 설정해보세요!</string>
    <string name="meeting">모임</string>
    <string name="_0">0</string>
    <string name="add_meeting_recommend">모임을 생성해보세요!</string>
    <string name="header_settlement_detail">내역 상세</string>
    <string name="name">이름</string>
    <string name="header_settlement">정산하기</string>
    <string name="meeting_name">모임명</string>
    <string name="meeting_date">모임 날짜:</string>
    <string name="date_selection">날짜를 선택하세요</string>
    <string name="settlement_date">정산 날짜:</string>
    <string name="meeting_place">모임 장소:</string>
    <string name="enter_place">장소를 입력하세요</string>
    <string name="select_all">전체 선택</string>
    <string name="request_settlement">정산 요청하기</string>
    <string name="pay_qr">결제 QR</string>
    <string name="header_payment_qr">결제 QR</string>
    <string name="srrk_money_qr">스르륵 머니 QR</string>
    <string name="payment_confirmation">결제가 완료되었습니다.</string>
    <string name="header_payment_method_registration">결제수단 등록</string>
    <string name="payment_method_registration">계좌 등록하기</string>
    <string name="payment_method_registration_2">신용/체크카드 등록하기</string>
    <string name="select_payment_method">등록하실\n결제수단을 선택해 주세요</string>
    <string name="header_account_registration">계좌 등록</string>
    <string name="next">다음</string>
    <string name="terms_agreement_suggestion">계좌 등록을 위해\n약관에 동의해 주세요.</string>
    <string name="agree_all">전체 동의</string>
    <string name="terms_1">전자금융거래 이용약관 동의 (필수)</string>
    <string name="terms_2">개인정보 수집 및 이용동의 (필수)</string>
    <string name="terms_3">개인정보 제공 및 위탁동의 (필수)</string>
    <string name="terms_4">개인정보처리방침 (필수)</string>
    <string name="terms_5">간편결제 계좌 연결 동의 (선택)</string>
    <string name="agree_all_description">전체 동의 체크박스</string>
    <string name="bank_account_verification">은행 계좌 인증</string>
    <string name="account_verification">계좌 인증</string>
    <string name="account_number">계좌번호</string>
    <string name="bank">은행</string>
    <string name="nh">NH농협</string>
    <string name="kakaobank">카카오뱅크</string>
    <string name="kb">KB국민</string>
    <string name="tossbank">토스뱅크</string>
    <string name="shinhan">신한</string>
    <string name="woori">우리</string>
    <string name="ibk">IBK기업</string>
    <string name="bank_selection">은행 선택</string>
    <string name="hana_bank">하나</string>
    <string name="mg_bank">새마을</string>
    <string name="bnk_bank">부산</string>
    <string name="k_bank">케이뱅크</string>
    <string name="shinhyup_bank">신협</string>
    <string name="epost_bank">우체국</string>
    <string name="suhyup_bank">수협</string>
    <string name="jeju_bank">제주</string>
    <string name="select_bank_suggestion">은행을 선택해 주세요</string>
    <string name="account_verification_instruction1">계좌로 1원을 입금했어요</string>
    <string name="account_verification_instruction2">계좌로 보내진 1원의 입금자 뒷 3자리를 입력해주세요</string>
    <string name="verification">인증하기</string>
    <string name="start">시작하기</string>
    <string name="back">Back</string>
    <string name="account_registration_confirm">계좌 등록을 완료했어요!</string>
    <string name="select_invite_option">초대 방식을 선택해주세요.</string>
    <string name="share_invite_link">초대 링크 공유하기</string>
    <string name="invite_user">스트륵 사용자 초대하기</string>
    <string name="cancel">취소</string>
    <string name="invitation_code">모임 초대 코드</string>
    <string name="_2">2</string>
    <string name="group_name">모임 이름</string>
    <string name="group_name_hint">모임 이름을 작성해주세요.</string>
    <string name="create">생성하기</string>
    <string name="join_with_invite_code">초대 코드로 참가하기</string>
    <string name="input_invite_code">초대 코드를 입력해주세요.</string>
    <string name="join">참가하기</string>
    <string name="settlement_list">정산 내역</string>
    <string name="check_agreement_status">동의 여부 확인</string>
</resources>