<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSettlementActivity">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back"/>

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_settlement"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/settlement_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/header_layout"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" >

        <EditText
            android:id="@+id/store_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_name"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:gravity="start"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"/>

        <EditText
            android:id="@+id/total_amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/_0"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:gravity="start"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meeting_date"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/meeting_date_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/date_selection"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:background="@null"
                android:focusable="false"
                android:clickable="true"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_below="@id/meeting_date_edit_text"
            android:layout_alignStart="@id/meeting_date_edit_text"
            android:layout_marginTop="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settlement_date"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/settlement_date_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/date_selection"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:background="@null"
                android:focusable="false"
                android:clickable="true"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_below="@id/settlement_date_edit_text"
            android:layout_alignStart="@id/settlement_date_edit_text"
            android:layout_marginTop="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meeting_place"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/location_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/enter_place"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:background="@null"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_below="@id/location_edit_text"
            android:layout_alignStart="@id/location_edit_text"
            android:layout_marginTop="4dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/members_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/settlement_info_layout"
        android:layout_above="@id/add_settlement_button"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/participant_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participants"
                android:textColor="@android:color/holo_orange_dark"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp" />

            <CheckBox
                android:id="@+id/select_all_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_all"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:nestedScrollingEnabled="true"
            android:scrollbars="vertical" />

    </LinearLayout>

    <Button
        android:id="@+id/add_settlement_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_settlement"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/button"
        android:layout_above="@id/bottomNavigationBar"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        app:menu="@menu/bottom_nav_menu"/>
</RelativeLayout>