<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentQRCodeActivity">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back"/>

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_payment_qr"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/qr_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_centerInParent="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:padding="24dp"
            android:orientation="vertical"
            android:gravity="center"
            android:elevation="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srrk_money_qr"
                android:textColor="@color/black"
                android:gravity="center"
                android:paddingTop="8dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/qr_code_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/qrcode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_dongas"
                android:textColor="@color/black"
                android:gravity="center"
                android:paddingTop="8dp"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
