<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog_background"
    android:padding="16dp"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/cancel_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_cancel"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true" />

    <RelativeLayout
        android:id="@+id/dialog_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/smile_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_smile"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/smile_icon"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/group_name"
            android:textAlignment="textStart"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/dialog_title_layout">

        <EditText
            android:id="@+id/group_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/group_name_hint" />


        <Button
            android:id="@+id/group_creation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/create"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/button"
            />

        <Button
            android:id="@+id/join_with_invite_code_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/join_with_invite_code"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/button"
            />

    </LinearLayout>

</RelativeLayout>
